--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BOSS HQ | ENCRYPTED NODE</title>
+  <title>>SHEHROZ BOSS HQ</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root { --bg: #050507; --glow: #00f2ff; --gold: #d4af37; --danger: #ff2e63; --border: rgba(0, 242, 255, 0.2); }
@@ -23,6 +23,7 @@
     .top-header { width: 100%; height: 65px; background: rgba(20, 20, 25, 0.95); border-bottom: 2px solid var(--glow); display: flex; justify-content: space-between; align-items: center; padding: 0 20px; box-sizing: border-box; z-index: 100; }
     .btn { padding: 8px 15px; background: transparent; color: var(--glow); border: 1px solid var(--glow); cursor: pointer; font-weight: 600; text-transform: uppercase; font-size: 10px; border-radius: 5px; transition: 0.3s; }
     .btn:hover { background: var(--glow); color: black; box-shadow: 0 0 15px var(--glow); }
+    <span>SHEHROZ BOSS HQ</span>
 
     /* Video Area */
     .main-container { flex: 1; display: flex; }
@@ -223,4 +224,5 @@
     
   </script>
 </body>
+
 </html>
