add reply option
Updated styles and functionality for buttons, alerts, and layout.

--- a/index.html
+++ b/index.html
@@ -12,22 +12,37 @@
     #bossAlert {
       position: fixed; inset: 0; z-index: 99999; display: none;
       justify-content: center; align-items: center; flex-direction: column;
-      background: rgba(255, 0, 0, 0.15); animation: flash 0.4s infinite;
+      background: rgba(255, 0, 0, 0.15); animation: alertFlash 0.4s infinite;
       pointer-events: none; text-align: center; border: 4px double var(--red);
     }
-    @keyframes flash { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
+    @keyframes alertFlash { 0%, 100% { opacity: 1; } 50% { opacity: 0.5; } }
     .boss-name { font-family: 'Orbitron'; font-size: clamp(35px, 10vw, 80px); color: var(--gold); text-shadow: 0 0 20px var(--red); margin: 0; }
 
+    /* Cyber Button Styling */
+    .btn { 
+      padding: 8px 14px; background: rgba(0, 242, 255, 0.05); color: var(--glow); 
+      border: 1px solid var(--glow); cursor: pointer; font-size: 10px; font-weight: bold; 
+      border-radius: 4px; text-transform: uppercase; font-family: 'Orbitron'; 
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1); 
+      position: relative; overflow: hidden; letter-spacing: 1px;
+    }
+    .btn:hover { background: var(--glow); color: black; box-shadow: 0 0 15px var(--glow); transform: translateY(-2px); }
+    .btn:active { transform: translateY(0); }
+
+    .btn-red { color: #ff4444; border-color: #ff4444; background: rgba(255, 68, 68, 0.05); }
+    .btn-red:hover { background: #ff4444; color: white; box-shadow: 0 0 15px #ff4444; border-color: #ff4444; }
+
+    .btn-gold { color: var(--gold); border-color: var(--gold); background: rgba(255, 215, 0, 0.05); }
+    .btn-gold:hover { background: var(--gold); color: black; box-shadow: 0 0 15px var(--gold); }
+
+    .btn-flash { background: var(--red); color: white; border: none; display: none; animation: pulse 1.5s infinite; }
+    @keyframes pulse { 0% { box-shadow: 0 0 0 0 rgba(255,0,0,0.7); } 70% { box-shadow: 0 0 0 10px rgba(255,0,0,0); } 100% { box-shadow: 0 0 0 0 rgba(255,0,0,0); } }
+
     #login { position: fixed; inset: 0; z-index: 100000; background: #000; display: flex; justify-content: center; align-items: center; }
-    .login-card { background: #0a0a0c; padding: 40px 30px; border-radius: 10px; border: 1px solid var(--glow); width: 90%; max-width: 350px; text-align: center; }
-    .login-card input { width: 100%; padding: 15px; margin: 10px 0; background: #000; border: 1px solid #1a1a1a; color: white; border-radius: 4px; outline: none; font-size: 16px; }
+    .login-card { background: #0a0a0c; padding: 40px 30px; border-radius: 10px; border: 1px solid var(--glow); width: 90%; max-width: 350px; text-align: center; box-shadow: 0 0 30px rgba(0, 242, 255, 0.1); }
+    .login-card input { width: 100%; padding: 15px; margin: 10px 0; background: #000; border: 1px solid #1a1a1a; color: white; border-radius: 4px; outline: none; font-size: 16px; box-sizing: border-box; }
     
     header { background: var(--panel); padding: 12px 20px; display: flex; justify-content: space-between; border-bottom: 1px solid rgba(0, 242, 255, 0.2); align-items: center; flex-wrap: wrap; gap: 10px; }
-    .btn { padding: 8px 14px; background: transparent; color: var(--glow); border: 1px solid var(--glow); cursor: pointer; font-size: 10px; font-weight: bold; border-radius: 2px; text-transform: uppercase; font-family: 'Orbitron'; transition: 0.2s; }
-    .btn-red { color: #ff4444; border-color: #ff4444; }
-    .btn-flash { background: var(--red); color: white; border: none; display: none; }
-    .btn-lock { color: var(--gold); border-color: var(--gold); display: none; }
-
     .main { display: flex; flex: 1; overflow: hidden; }
     .video-side { flex: 2; background: #000; }
     .chat-side { flex: 1; display: flex; flex-direction: column; background: #08080a; min-width: 320px; border-left: 1px solid #222; }
@@ -37,6 +52,7 @@
     #msgs { flex: 1; overflow-y: auto; padding: 15px; font-size: 13px; }
     .msg { margin-bottom: 10px; padding: 10px; background: rgba(255,255,255,0.03); border-radius: 4px; border-left: 2px solid #222; }
     .msg-admin { border-left-color: var(--gold); color: var(--gold); }
+    
     .reply-tag { font-size: 9px; color: var(--glow); cursor: pointer; float: right; border: 1px solid var(--glow); padding: 2px 5px; border-radius: 2px; }
     .kik-btn { font-size: 9px; color: #ff4444; cursor: pointer; float: right; border: 1px solid #ff4444; padding: 2px 5px; border-radius: 2px; margin-right: 5px; }
 
@@ -59,7 +75,7 @@
       <h1>HQ ACCESS</h1>
       <input type="text" id="u" placeholder="USERNAME">
       <input type="password" id="p" placeholder="ACCESS CODE">
-      <button class="btn" style="width:100%; margin-top:15px; padding:15px;" onclick="connect()">CONNECT</button>
+      <button class="btn" style="width:100%; margin-top:15px; padding:15px; font-size:14px;" onclick="connect()">INITIALIZE</button>
     </div>
   </div>
 
@@ -67,14 +83,14 @@
     <div style="display:flex; align-items:center; gap:10px;">
       <span style="font-family:'Orbitron'; font-size:11px; color:var(--glow);" id="myNameLabel">HQ CENTER</span>
       <button class="btn btn-flash" id="flashBtn" onclick="triggerFlash()">🚨 FLASH</button>
-      <button class="btn btn-lock" id="lockBtn" onclick="toggleLock()">🔒 LOCK</button>
+      <button class="btn btn-gold" style="display:none;" id="lockBtn" onclick="toggleLock()">🔒 LOCK</button>
     </div>
-    <div style="display:flex; gap:5px; flex-wrap: wrap;">
+    <div style="display:flex; gap:8px; flex-wrap: wrap;">
       <button class="btn" onclick="playMusic()">🎵 YT</button>
       <button class="btn btn-red" onclick="stopYT()">⏹️ STOP</button>
       <button class="btn" onclick="toggleCam()">📹 CAM</button>
-      <button class="btn" onclick="invite()">🔗 INVITE</button>
-      <button class="btn" id="vipBtn" style="display:none; color:var(--gold); border-color:var(--gold);" onclick="addVIP()">⭐ VIP</button>
+      <button class="btn" onclick="inviteWhatsApp()">🔗 INVITE</button>
+      <button class="btn btn-gold" id="vipBtn" style="display:none;" onclick="addVIP()">⭐ VIP</button>
       <button class="btn btn-red" id="adminDel" style="display:none;" onclick="clearData()">🗑️</button>
       <button class="btn btn-red" onclick="location.reload()">EXIT</button>
     </div>
@@ -86,7 +102,7 @@
       <iframe id="yt-frame" style="width:100%; height:180px; display:none; border:none;" src="" allow="autoplay"></iframe>
       <div id="msgs"></div>
       <div class="input-box">
-        <input type="text" id="mInp" placeholder="Enter command..." onkeypress="if(event.key==='Enter') sendMsg()">
+        <input type="text" id="mInp" placeholder="Type command..." onkeypress="if(event.key==='Enter') sendMsg()">
         <button class="btn" onclick="sendMsg()" style="background:var(--glow); color:black; border:none; padding: 0 20px;">SEND</button>
       </div>
     </div>
@@ -107,15 +123,11 @@
       const n = document.getElementById("u").value.trim();
       const pass = document.getElementById("p").value;
       if(!n) return;
-
       const roomData = await db.collection('rooms').doc('hq').get();
       const locked = roomData.data()?.locked || false;
-
       const ban = await db.collection('rooms').doc('hq').collection('banned').doc(n.toLowerCase()).get();
       if(ban.exists) { alert("BANNED"); return; }
-
       document.getElementById("beep").play().then(()=>document.getElementById("beep").pause()).catch(()=>{});
-
       if(n.toLowerCase()==="admin" && pass==="1661@786") {
         myName = "SHEHROZ"; isAdmin = true;
         document.getElementById("vipBtn").style.display = "inline-block";
@@ -126,13 +138,12 @@
       } else if(pass==="1234") {
         myName = n.toUpperCase();
         const vip = await db.collection('rooms').doc('hq').collection('vips').doc(n.toLowerCase()).get();
-        if(locked && !vip.exists) { alert("ROOM IS LOCKED BY ADMIN"); return; }
+        if(locked && !vip.exists) { alert("LOCKED BY ADMIN"); return; }
         if(vip.exists) triggerFlash();
       } else { 
-        if(locked) { alert("ROOM LOCKED"); return; }
+        if(locked) { alert("LOCKED"); return; }
         alert("DENIED"); return; 
       }
-
       localStorage.setItem("user_n", n);
       document.getElementById("login").classList.add("hidden");
       document.getElementById("h").classList.remove("hidden");
@@ -144,8 +155,11 @@
     function toggleLock() {
       isLocked = !isLocked;
       db.collection('rooms').doc('hq').update({ locked: isLocked });
-      document.getElementById("lockBtn").innerText = isLocked ? "🔓 UNLOCK" : "🔒 LOCK";
-      alert(isLocked ? "Room Locked" : "Room Unlocked");
+    }
+
+    function inviteWhatsApp() {
+      const text = encodeURIComponent("Join HQ Command Center: " + window.location.href);
+      window.open(`https://wa.me/?text=${text}`, '_blank');
     }
 
     function triggerFlash() { db.collection('rooms').doc('hq').update({ boss: myName, signal: Date.now(), time: new Date().toLocaleTimeString() }); }
@@ -192,7 +206,6 @@
     function stopYT() { db.collection('rooms').doc('hq').update({ ytId: firebase.firestore.FieldValue.delete() }); }
     function addVIP() { const v = prompt("VIP Name:"); if(v) db.collection('rooms').doc('hq').collection('vips').doc(v.toLowerCase()).set({a:1}); }
     function kikUser(u) { if(confirm("Ban "+u+"?")) db.collection('rooms').doc('hq').collection('banned').doc(u.toLowerCase()).set({a:1}); }
-    function invite() { prompt("Copy Link:", window.location.href); }
     function clearData() { if(confirm("Clear logs?")) db.collection('rooms').doc('hq').collection('chat').get().then(s=>s.forEach(d=>d.ref.delete())); }
     async function toggleCam() {
       const v = document.getElementById("vid");
