--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <title>HQ CYBER PRO</title>
+  <title>HQ CYBER FINAL</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
   <style>
@@ -30,7 +30,7 @@
 
     .chat-side { flex: 1; display: flex; flex-direction: column; background: #08080a; border-left: 1px solid #222; }
     #msgs { flex: 1; overflow-y: auto; padding: 10px; font-size: 11px; }
-    .msg { margin-bottom: 8px; padding: 8px; background: rgba(255,255,255,0.02); border-left: 2px solid #555; border-radius: 0 5px 5px 0; line-height: 1.4; }
+    .msg { margin-bottom: 8px; padding: 8px; background: rgba(255,255,255,0.02); border-left: 2px solid #555; border-radius: 0 5px 5px 0; }
     .msg-vip { border-left-color: var(--gold); color: var(--gold); background: rgba(255,215,0,0.05); }
     .act-btn { font-size: 7px; cursor: pointer; border: 1px solid #444; padding: 1px 4px; border-radius: 3px; margin-left: 5px; float: right; color: var(--glow); font-family: 'Orbitron'; background: #000; }
 
@@ -44,14 +44,14 @@
 <body onload="checkPrev()">
 
   <audio id="beep" src="https://www.soundjay.com/buttons/beep-01a.mp3"></audio>
-  <div id="bossAlert"><div class="boss-name" id="alertName">ADMIN</div><div style="color:var(--gold); font-family:Orbitron; font-size:9px; margin-top:10px;">AUTHORIZED ACCESS</div></div>
+  <div id="bossAlert"><div class="boss-name" id="alertName">ADMIN</div><div style="color:var(--gold); font-family:Orbitron; font-size:9px; margin-top:10px;">AUTHORIZED</div></div>
 
   <div id="login">
     <div style="background:var(--panel); padding:25px; border:1px solid var(--glow); text-align:center; width:100%; max-width:260px; border-radius:15px;">
-      <h2 style="font-family:Orbitron; color:var(--glow); font-size:16px;">TERMINAL LOGIN</h2>
-      <input type="text" id="u" placeholder="USERNAME" style="width:100%; padding:12px; margin:5px 0; background:#000; color:white; border:1px solid #333; border-radius:5px; box-sizing:border-box;">
+      <h2 style="font-family:Orbitron; color:var(--glow); font-size:16px;">HQ TERMINAL</h2>
+      <input type="text" id="u" placeholder="USER" style="width:100%; padding:12px; margin:5px 0; background:#000; color:white; border:1px solid #333; border-radius:5px; box-sizing:border-box;">
       <input type="password" id="p" placeholder="CODE" style="width:100%; padding:12px; margin:5px 0; background:#000; color:white; border:1px solid #333; border-radius:5px; box-sizing:border-box;">
-      <button class="btn" style="width:100%; padding:12px; margin-top:10px;" onclick="connect()">INITIALIZE</button>
+      <button class="btn" style="width:100%; padding:12px; margin-top:10px;" onclick="connect()">BOOT</button>
     </div>
   </div>
 
@@ -132,7 +132,8 @@
             <span class="act-btn" onclick="setReply('${d.name}')">Reply</span>
             ${isAdmin && d.name !== "SHEHROZ" ? `
               <span class="act-btn" style="color:red;" onclick="kickUser('${d.name}')">KICK</span>
-              <span class="act-btn" style="color:var(--gold);" onclick="makeVIP('${d.name}')">GIVE VIP</span>
+              <span class="act-btn" style="color:#00ff00;" onclick="unKickUser('${d.name}')">UNKICK</span>
+              <span class="act-btn" style="color:var(--gold);" onclick="makeVIP('${d.name}')">VIP</span>
               <span class="act-btn" style="color:white;" onclick="removeVIP('${d.name}')">REVOKE</span>
             ` : ''}
           </div>`;
@@ -140,8 +141,7 @@
       });
 
       db.collection('rooms').doc('hq').onSnapshot(doc => {
-        const d = doc.data(); 
-        if(d && d.signal > lastSig) {
+        const d = doc.data(); if(d && d.signal > lastSig) {
           document.getElementById("alertName").innerText = d.boss;
           document.getElementById("bossAlert").style.display = "flex";
           document.getElementById("beep").play().catch(()=>{});
@@ -186,6 +186,7 @@
     function triggerFlash() { db.collection('rooms').doc('hq').update({ boss: myName, signal: Date.now() }); }
     function sendMsg() { const i = document.getElementById("mInp"); if(!i.value) return; db.collection('rooms').doc('hq').collection('chat').add({ name: myName, msg: i.value, time: Date.now() }); i.value = ""; }
     function kickUser(u) { if(confirm("Kick?")) db.collection('rooms').doc('hq').collection('kicked').doc(u).set({kicked:true}); }
+    function unKickUser(u) { if(confirm("Unkick?")) db.collection('rooms').doc('hq').collection('kicked').doc(u).delete(); }
     function makeVIP(u) { if(confirm("Make VIP?")) db.collection('rooms').doc('hq').collection('vips').doc(u).set({vip:true}); }
     function removeVIP(u) { if(confirm("Remove VIP?")) db.collection('rooms').doc('hq').collection('vips').doc(u).delete(); }
     function toggleMute() { if(camStream) { isMuted = !isMuted; camStream.getAudioTracks()[0].enabled = !isMuted; alert(isMuted?"Muted":"Unmuted"); }}
